# LoggerFlow

./: README.md  pyproject.toml  requirements.txt
src/logger_flow/: crew.py  main.py
src/logger_flow/agents/: __init__.py  log_agents.py
src/logger_flow/config/: agents.yaml  tasks.yaml
src/logger_flow/tasks/: analyze_logs_task.py  create_tickets_task.py  ingest_logs_task.py
src/logger_flow/tools/: __init__.py  custom_tool.py  gemini_analysis_tool.py  jira_tool.py  log_reader_tool.py
